# puya

./: .coveragerc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  benchmark.py  langspec.json  langspec.puya.json  langspec.wyvern.json  monitor_threads.sh  playground.py  puyapy-lsp-wrapper  pyproject.toml  sizes.md
algopy_testing/: .coveragerc  .editorconfig  .gitignore  CONTRIBUTING.md  README.md  hatch_build.py  pyproject.toml
algopy_testing/examples/auction/: contract.py  test_contract.py
algopy_testing/examples/htlc_logicsig/: signature.py  test_signature.py
algopy_testing/examples/proof_of_attendance/: contract.py  test_contract.py
algopy_testing/examples/simple_voting/: contract.py  test_contract.py
algopy_testing/examples/zk_whitelist/: contract.py  test_contract.py
algopy_testing/scripts/: check_stubs_cov.py  refresh_test_artifacts.py
algopy_testing/src/algopy/: __init__.py  _constants.py  _enums.py  arc4.py  constants.py  gtxn.py  itxn.py  op.py  utils.py
algopy_testing/src/algopy/_models/: __init__.py  account.py  application.py  asset.py  global_state.py  itxn.py  txn.py
algopy_testing/src/algopy/_primitives/: __init__.py  biguint.py  bytes.py  string.py
algopy_testing/src/algopy/error/: __init__.py  uint64.py
algopy_testing/src/algopy/primitives/: __init__.py  biguint.py  bytes.py  constants.py  string.py  uint64.py  util.py
algopy_testing/src/algopy_testing/: __init__.py  arc4.py  constants.py  context.py  enums.py  gtxn.py  itxn.py  op.py  protocols.py  utils.py
algopy_testing/src/algopy_testing/contexts/: __init__.py  state_context.py
algopy_testing/src/algopy_testing/decorators/: abimethod.py  baremethod.py  subroutine.py
algopy_testing/src/algopy_testing/models/: __init__.py  account.py  application.py  asset.py  block.py  box.py  contract.py  gitxn.py  global_state.py  global_values.py  gtxn.py  itxn.py  logicsig.py  template_variable.py  transactions.py  txn.py  unsigned_builtins.py  util.py
algopy_testing/src/algopy_testing/primitives/: __init__.py  biguint.py  bytes.py  string.py  uint64.py
algopy_testing/src/algopy_testing/state/: __init__.py  global_state.py  local_state.py
algopy_testing/src/algopy_testing/utilities/: __init__.py  budget.py  log.py
algopy_testing/tests/: common.py  conftest.py  test_arc4.py  test_context.py  test_miscellaneous_op.py  test_op.py  test_primitives.py  util.py  utils.py
algopy_testing/tests/arc4/: conftest.py  test_abi_call.py  test_address.py  test_bool.py  test_dynamic_array.py  test_dynamic_bytes.py  test_emit.py  test_static_array.py  test_string.py  test_struct.py  test_tuple.py  test_ufixednxm.py  test_uintn.py
algopy_testing/tests/artifacts/: crypto_ops_client.py
algopy_testing/tests/artifacts/Arc4InnerTxns/: contract.py
algopy_testing/tests/artifacts/Arc4InnerTxns/data/: Arc4InnerTxnsContract.approval.teal  Arc4InnerTxnsContract.arc32.json  Arc4InnerTxnsContract.clear.teal
algopy_testing/tests/artifacts/Arc4PrimitiveOps/: contract.py
algopy_testing/tests/artifacts/Arc4PrimitiveOps/data/: Arc4PrimitiveOpsContract.approval.teal  Arc4PrimitiveOpsContract.arc32.json  Arc4PrimitiveOpsContract.clear.teal
algopy_testing/tests/artifacts/Auction/: contract.py
algopy_testing/tests/artifacts/Auction/data/: AuctionContract.approval.teal  AuctionContract.arc32.json  AuctionContract.clear.teal
algopy_testing/tests/artifacts/CryptoOps/: client.py  contract.py
algopy_testing/tests/artifacts/CryptoOps/data/: CryptoOpsContract.approval.teal  CryptoOpsContract.arc32.json  (+1 more)
algopy_testing/tests/artifacts/GlobalStateValidator/: contract.py
algopy_testing/tests/artifacts/MiscellaneousOps/: contract.py
algopy_testing/tests/artifacts/PrimitiveOps/: client.py  contract.py
algopy_testing/tests/contexts/: test_blockchain.py
algopy_testing/tests/models/: test_uenumerate.py  test_urange.py
algopy_testing/tests/primitives/: conftest.py  test_biguint.py  test_bytes.py  test_log.py  test_string.py  test_uint64.py
algopy_testing/tests/utilities/: conftest.py  test_log.py
docs/: .gitignore  (+53 more)
examples/puya/: README.md  conftest.py  pyproject.toml  verify-all.sh
examples/puya/01-counter/: contract.py  index.py  test_contract.py
examples/puya/02-greeter/: contract.py  index.py  test_contract.py
examples/puya/03-logic-sig-gate/: contract.py  index.py  template.vars  test_contract.py
examples/puya/04-type-explorer/: contract.py  index.py  test_contract.py
examples/puya/05-membership-registry/: contract.py  index.py  test_contract.py
examples/puya/06-key-value-store/: KeyValueStore.approval.puya.map  KeyValueStore.approval.teal  KeyValueStore.arc56.json  contract.py  index.py  test_contract.py
examples/puya/07-array-playground/: contract.py  index.py  test_contract.py
examples/puya/08-object-tuples/: contract.py  index.py  test_contract.py
examples/puya/09-token-manager/: contract.py  index.py  test_contract.py
examples/puya/10-multi-txn-distributor/: contract.py  index.py  test_contract.py
examples/puya/11-contract-factory/: contract.py  index.py  test_contract.py
examples/puya/12-event-logger/: contract.py  index.py  test_contract.py
examples/puya/13-inheritance-showcase/: contract.py  index.py  test_contract.py
examples/puya/14-crypto-vault/: contract.py  index.py  test_contract.py
examples/puya/15-dex-pool/: contract.py  index.py  test_contract.py
examples/puya/16-governance-dao/: contract.py  index.py  test_contract.py
examples/puya/shared/: __init__.py  constants.py  utils.py
stubs/: README.md  algopy.py  pyproject.toml
stubs/algopy-stubs/: __init__.pyi  _aliases.pyi  _array.pyi  _base_contract.pyi  _box.pyi  _compiled.pyi  _constants.pyi  _contract.pyi  _hints.pyi  _interfaces.pyi  _logic_sig.pyi  _native.pyi  _primitives.pyi  _reference.pyi  _state.pyi  _template_variables.pyi  _transaction.pyi  _unsigned_builtins.pyi  _util.pyi  arc4.pyi  gtxn.pyi  itxn.pyi  op.pyi
stubs/algopy_testing/: __init__.py  _primitives.py  arc4.py
(+6072 files in other folders)
