[project]
name = "puyapy"
version = "5.0.0-rc.6"
description = "An optimising compiler for Algorand Python"
authors = [{ name = "Algorand Foundation", email = "contact@algorand.foundation" }]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
]
license = "AGPL-3.0-or-later"
requires-python = ">=3.12.0,<4"
dependencies = [
    "typing-extensions>=4.11.0,<5",
    "attrs>=25.3.0,<26",
    "structlog>=25.2.0,<26",
    "docstring-parser>=0.14.1",
    "pycryptodomex>=3.6.0,<4",
    "immutabledict>=4.2.0,<5",
    "packaging~=24.0",
    "colorama>=0.4.6,<0.5 ; sys_platform == 'win32'",
    "cattrs>=25,<26",
    "networkx>=3.4.2,<4",
    "cyclopts>=3.23.1",
    # vendored mypy dependencies
    "mypy_extensions>=1.0.0,<2",
    "pathspec>=0.9",
]

[dependency-groups]
dev = [
    "algorand-python",
    "mypy==1.17.0",
    "ruff>=0.7.4,<0.8",
    "pre-commit>=4.0.1,<5",
    "poethepoet>=0.30.0,<0.31",
    "scriv>=1.6.2,<2",
]
testing = [
    "pytest>=7.4.0,<8",
    "pytest-xdist[psutil]>=3.3.1,<4",
    "py-algorand-sdk>=2.4.0,<3",
    "algokit-utils>=2.3.2,<3",
    "pytest-cov>=4.1.0,<5",
    "prettytable>=3.9.0,<4",
]
doc = [
    "sphinx>=7.2.6,<8",
    "furo>=2024.1.29,<2025",
    "myst-parser>=2.0.0,<3",
    "sphinx-autodoc2>=0.5.0,<0.6",
    "sphinx-copybutton>=0.5.2,<0.6",
]
cicd = [
    "python-semantic-release~=9.8.7",
    "algokit",
    "pyinstaller>=6.12.0,<7",
    "pytest-split>=0.10.0,<0.11",
    "junitparser>=3.2.0,<4",
]

[project.scripts]
puya = "puya.__main__:cli"
puyapy = "puyapy.__main__:main"
puyapy-clientgen = "puyapy.client_gen:main"

[tool.uv]
default-groups = [
    "dev",
    "testing",
    "doc",
    "cicd",
]

[tool.uv.sources]
# include stubs distribution package as a dev dependency
algorand-python = { path = "stubs", editable = true }

[tool.hatch.build.targets.sdist]
include = [
    "src/puya",
    "src/puyapy",
    "stubs/algopy-stubs/*",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/puya",
    "src/puyapy",
    "stubs/algopy-stubs/*",
]
[tool.hatch.build.targets.wheel.force-include]
# copy stubs into published artifacts without the -stubs suffix
"stubs/algopy-stubs" = "puyapy/_typeshed/stdlib/algopy"
[tool.hatch.build.targets.wheel.sources]
"src/puya" = "puya"
"src/puyapy" = "puyapy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "localnet: test requires `algokit localnet start`",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-n auto --cov-config=.coveragerc --dist worksteal"
testpaths = [
    "tests"
]
filterwarnings = [
    # treat all warnings as errors by default
    "error",
    # ignore warnings from docstring_parser dependency, re-evaluate when changing python version or if docstring_parser is updated
    "ignore:ast.NameConstant is deprecated and will be removed in Python 3.14; use ast.Constant instead",
    "ignore:ast.Num is deprecated and will be removed in Python 3.14; use ast.Constant instead",
    "ignore:ast.Str is deprecated and will be removed in Python 3.14; use ast.Constant instead",
    # ignore pytest-xdist warning
    "ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated."
]
xfail_strict = true
pythonpath = [
    "src/puyapy/_vendor",
]

[tool.mypy]
python_version = "3.12"
strict = true
untyped_calls_exclude = [
    "algosdk",
]
exclude = [
    "src/puyapy/_typeshed",
    "src/puyapy/_vendor",
    "stubs/algopy\\.py",
]

[[tool.mypy.overrides]]
module = ["algopy", "algopy.*"]
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true

[[tool.mypy.overrides]]
module = ["algosdk", "algosdk.*"]
disallow_untyped_calls = false

[tool.ruff]
target-version = "py312"
line-length = 99
extend-exclude = [
    "src/puyapy/_typeshed",
    "src/puyapy/_vendor",
    "test_cases/constants/non_utf8.py", # E902 ruff doesn't read this file encoding
]
# force-exclude ensures these files are excluded even when run via pre-commit
force-exclude = true

[tool.ruff.lint]
select = [
    # all possible codes as of this ruff version are listed here,
    # ones we don't want/need are commented out to make it clear
    # which have been omitted on purpose vs which ones get added
    # in new ruff releases and should be considered for enabling
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "C90",    # mccabe
    "I",      # isort
    "N",      # PEP8 naming
    # "D",    # pydocstyle
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",    # flake8-bandit
    # "BLE",  # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    # "COM",  # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    # "EM",   # flake8-errmsg
    "EXE",  # flake8-executable
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    # "G",    # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "INT",    # flake8-gettext
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    # "TD",     # flake8-todos
    # "FIX",    # flake8-fixme
    # "ERA",    # eradicate
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "TRY",  # tryceratops
    # "FLY",    # flynt
    "PERF",   # Perflint
    "LOG",    # flake8-logging
    "RUF",    # Ruff-specific rules
    # below are for packages we're not using
    # "TRIO",  # flake8-trio
    # "DJ",   # flake8-django
    # "AIR",  # Airflow
    # "PD",   # pandas-vet
    # "NPY",  # NumPy-specific rules
]
ignore = [
    "ISC001",  # ruff-format conflict
    "ANN101",  # no type for self
    "ANN102",  # no type for cls
    "SIM108",  # allow if-else in place of ternary
    "PLR2004", # magic values... can't configure to ignore simple low value ints like 2
    "PLW2901", # allow updating loop value...
    "PYI025",  # I can tell the difference between set and Set thank you very much
    "UP040",   # TypeAlias -> type keyword, waiting for mypy support
    "TRY003",  # allow long exception messages in Exception constructor
    "RET503",  # false negatives when involving typing.Never, covered by mypy anyway
    "RET504", "RET505", # stylistic choices for readability
    "S101",   # allow asserts
    "TCH001", "TCH002", "TCH003", # don't require things to be in a type checking block
    # TODO: REMOVE ALL THE BELOW AFTER REFACTORING BUILDING CODE vvv
    "C901", # is too complex (> 10)
    "PLR0911", # Too many return statements (> 6)
    "PLR0912", # Too many branches (> 12)
    "PLR0913", # Too many arguments to function call (> 5)
    "PLR0915", # Too many statements (> 50)
]
unfixable = [
    "F841",     # don't delete unused local variables automatically
]
[tool.ruff.lint.per-file-ignores]
"stubs/algopy.py" = [
    "INP001"
]
"src/**" = [
    "PT",       # no pytest rules
]
"**/*.pyi" = [
    "SLOT"
]
"src/puyapy/awst_build/eb/**" = [
    "ARG002", # TODO: remove this by either figuring out how to make it respect abstract methods
              #       or manually adding @typing.override everywhere 🥲
]
"src/puya/lib_embedded/**" = [
    "INP",      # allow missing __init__.py
]
"stubs/algopy-stubs/**" = [
    "PYI021",   # allow docstrings in stubs
    "PYI053",   # allow "docstrings" in overloads
]
"scripts/**" = [
    "S",
    "PT",       # no pytest rules
    "T201",     # allow prints
    "TRY002",   # allow raising builtin exceptions
]
"tests/**" = [
    "S",
]
"{examples,test_cases}/**" = [
    "PT",       # no pytest rules
    "B011",     # allow assert False, "msg"
    "FBT001",   # allow positional definitions
    "FBT003",   # allow positional booleans
    "INP",      # allow missing __init__.py
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true
mypy-init-return = true

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.branches.alpha]
match = ".*"
prerelease_token = "rc"
prerelease = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "docs"]

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*", "stubs/dist/*", "bdist/*"]
upload_to_vcs_release = true

[tool.semantic_release.remote.token]
env = "GITHUB_TOKEN"

[tool.poe.tasks]
docs.script = "scripts.generate_docs:main()"
gen_lang_spec.script = "scripts.transform_lang_spec:main()"
gen_stubs.script = "scripts.generate_stubs:main()"
gen_avm_ops.script = "scripts.generate_avm_ops:main()"
gen_assemble_ops.script = "scripts.generate_assemble_op_spec:main()"
gen_puya_lib.script = "scripts.generate_puya_lib:main()"
gen = ["gen_lang_spec", "gen_stubs", "gen_avm_ops", "gen_assemble_ops", "gen_puya_lib"]
compile_all.script = "scripts.compile_all_examples:main()"
bump_stubs.script = "scripts.bump_stubs_version:main()"
check_stubs.script = "scripts.check_stubs_version:main()"
size_diff.script = "scripts.test_cases_diff_summary:main()"
compile_all_fast.script = "scripts.compile_all_fast:main()"
lint.cmd = "pre-commit run --all-files"

[tool.poe.tasks.next_version]
cmd="semantic-release version --print-tag"
# setting a default value for GITHUB_TOKEN allows the command to be run locally
# but in the CD pipeline it will be overridden
env.GITHUB_TOKEN.default = "na"

[tool.poe.tasks.coverage]
cmd = "pytest --cov --cov-report xml --cov-report term"
env = { COVERAGE_CORE = "sysmon" }

[tool.scriv]
version="command: poe -q next_version"
format = "md"
md_header_level=2
entry_title_template="{% if version %}{{ version }}{% endif %} ({{ date.strftime('%Y-%m-%d') }})"
