[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algorand-python"
# this version represents the version of the stub API's and should follow semver semantics
# when updating this value also update src/compile.py:MAX_SUPPORTED_ALGOPY_VERSION_EX if it is a major/minor change
# also see stubs/README.md#versioning
version = "1.1.4"
description = "API for writing Algorand Python Smart contracts"
authors = [
  { name = "Algorand Foundation", email = "contact@algorand.foundation" },
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Typing :: Stubs Only",
]
license = "AGPL-3.0-or-later"

[project.urls]
Documentation = "https://algorandfoundation.github.io/puya"
Issues = "https://github.com/algorandfoundation/puya/issues"
Source = "https://github.com/algorandfoundation/puya"

[tool.hatch.build.targets.wheel]
packages = ["algopy-stubs"]

[tool.hatch.build.targets.wheel.force-include]
"algopy.py" = "algopy.py"

[tool.black]
line-length = 99
