[tool.poetry]
name = "algorand-python"
# This version represents the version of the stub API's and should follow semver semantics.
# When updating this value, if it is a major/minor change, make sure to update:
#   src/puyapy/parse.py:MAX_SUPPORTED_ALGOPY_VERSION_EX
# For more info see stubs/README.md#versioning
version = "2.9.0"
description = "API for writing Algorand Python Smart contracts"
authors = ["Algorand Foundation <contact@algorand.foundation>"]
readme = "README.md"
packages = [
    { include = "algopy.py" },
    { include = "algopy-stubs" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Typing :: Stubs Only",
]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
